--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,7 +54,7 @@
             android:layout_marginRight="20dp"
             android:layout_marginBottom="80dp"
             android:background="@drawable/btn_signin_google"
-            android:text="@string/signin_facebook"
+            android:text="@string/signin_google"
             android:textColor="@color/colorWhite" />
 
 
